...
    lazy var authKeyTextField: CustomTextFiled = {
        let textFiled = CustomTextFiled(leadingText: "AUTH_KEY".localize(), placeholderText: "ENTER_AUTH_KEY".localize())
        textFiled.translatesAutoresizingMaskIntoConstraints = false
        return textFiled
    }()
    
    lazy var continueButton: UIButton = {
        let button = UIButton()
        button.addTarget(self, action: #selector(onContinueButtonClicked), for: .primaryActionTriggered)
        button.translatesAutoresizingMaskIntoConstraints = false
        button.setTitle("CONTINUE".localize(), for: .normal)
        button.setTitleColor(CometChatTheme.white, for: .normal)
        button.backgroundColor = CometChatTheme.primaryColor
...
